[package]
name = "raytracing-one-weekend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.20.2"
libm = "0.2.1"
rand = { version = "0.8.4", features = ["small_rng"]}
threadpool = "1.8.1"
oidn = "1.4.1"
image = "0.23.14"